serious progress on showing park list and wait times

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "waitweb",
-  "short_name": "waitweb",
+  "name": "When You Wish Upon A Line",
+  "short_name": "Wish Upon A Line",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
