--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "pages": "cp -r ./dist/*  ./docs"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "autoprefixer": "^9.4.0",
