--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
+    "vue-wait": "^1.3.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
