--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
@@ -10,19 +11,20 @@
     "autoprefixer": "^9.4.0",
     "axios": "^0.18.0",
     "register-service-worker": "^1.5.2",
-    "vue": "^2.5.17",
+    "vue": "^2.6.2",
     "vue-material": "^1.0.0-beta-10.2",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.0.2",
     "vue-wait": "^1.3.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-pwa": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "^2.6.2",
     "webpack": "^4.26.1"
   }
 }
